--- a/less/styles.less
+++ b/less/styles.less
@@ -213,17 +213,43 @@ CENTER is stargate and some lines from chevron boxes
                     top: calc( @stargate-radius-negative - @ring-border-size );
                     left: calc( @stargate-radius-negative - @ring-border-size );
                     z-index: -1;
+                    overflow: hidden;
                     &::before {
                         content: "";
                         position: absolute;
                         top: 0;
                         left: 0;
+                        overflow: hidden;
                         transform: translate(-50%, -50%);
                         width: 100%;
                         height: 100%;
                         border-radius: 100%;
-                        animation: growAndShrink 1.5s infinite;
+                        animation: inactiveGate 1.5s infinite;
                         background: radial-gradient(circle, orangered 30%, black 70%);
+                    }
+                    &.active::before {
+                        display: none;
+                    }
+                    &.active::after {
+                        content: "";
+                        position: absolute;
+                        top: 0;
+                        left: 0;
+                        overflow: hidden;
+                        transform: translate(-50%, -50%);
+                        width: 100%;
+                        height: 100%;
+                        border-radius: 100%;
+                        transform: scale(0);
+                        animation: loadGate 2s 1;
+                        background: radial-gradient(circle, lightskyblue 30%, black 70%);
+                    }
+                    &.infinite::after {
+                        animation: activeGate 4s infinite !Important;
+                    }
+                    &.shutdown::after {
+                        opacity: 0;
+                        transition: opacity 2s ease;
                     }
                 }
                 & > .glyph-ring-inner {
@@ -1001,6 +1027,7 @@ CENTER is stargate and some lines from chevron boxes
                     }
                     &.engaged {
                         animation: engagedAnimation 3s;
+                        animation-iteration-count: 1;
                         color: black;
                         letter-spacing: 30px;
                         display: none;
@@ -1018,9 +1045,8 @@ CENTER is stargate and some lines from chevron boxes
                         display: none;
                     }
                     &.shutdown {
-                        animation: flashingTextWhite 3s infinite;
-                        color: black;
-                        letter-spacing: 30px;
+                        color: red;
+                        letter-spacing: 0px;
                         display: none;
                     }
                 }
@@ -1119,8 +1145,22 @@ RIGHT Panel are chevron boxes
             border: @border-size solid @cyan;
             border-radius: @box-border-radius;
             position: relative;
+            & > .glyph-number {
+                position: absolute;
+                bottom: 0;
+                left: -50px;
+                color: white;
+                font-size: 50px;
+                display: none;
+            }
             &.active {
                 border-color: red;
+                & > .glyph-number {
+                    display: block;
+                }
+            }
+            &.incoming {
+                background-color: red;
             }
             & > .line {
                 position: absolute;
@@ -1442,7 +1482,7 @@ Utils
         color: black;
     }
 }
-@keyframes growAndShrink {
+@keyframes inactiveGate {
     0%, 100% {
         transform: scale(0);
     }
@@ -1451,6 +1491,22 @@ Utils
     }
     36% {
         transform: scale(0);
+    }
+}
+@keyframes loadGate {
+    0% {
+        transform: scale(0);
+    }
+    100% {
+        transform: scale(1.2);
+    }
+}
+@keyframes activeGate {
+    0%, 100% {
+        transform: scale(1.2);
+    }
+    50% {
+        transform: scale(0.8);
     }
 }
 @keyframes rotate {
